Project

General

Profile

Actions

Bug #11870

closed

Eradication of typical misspellings

Bug #11870: Eradication of typical misspellings

Added by tad (Tadashi Saito) almost 11 years ago. Updated over 10 years ago.

Status:
Closed
Target version:
-
[ruby-core:72466]

Description

(Note: this patch is low priority and I do not complained if this isn't applied to 2.3 release.)

Thanks to the Wikipedia page https://en.wikipedia.org/wiki/Wikipedia:Lists_of_common_misspellings/For_machines ,
I've found many misspellings in both of documents and codes.

I've attached a patch for trunk to correct them.


Files

0001-fix-common-misspelling.patch (23.3 KB) 0001-fix-common-misspelling.patch tad (Tadashi Saito), 12/24/2015 03:21 AM
0002-fix-email-address.patch (813 Bytes) 0002-fix-email-address.patch tad (Tadashi Saito), 03/25/2016 02:49 PM
Actions

Also available in: PDF Atom